# ChangeLog for games-fps/blackshadeselite
# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header

  12 Feb 2009; Michał Ziąbkowski <mziab@o2.pl>
  +files/blackshadeselite-gcc43.patch:
  Oops.

  12 Feb 2009; Michał Ziąbkowski <mziab@o2.pl>
  blackshadeselite-9999.ebuild:
  Added gcc43 patch. Fixed docs.

  22 Jan 2009; Michał Ziąbkowski <mziab@o2.pl> Manifest:
  Fixed Manifest.

*blackshades-9999 (24 Nov 2007)

  24 Nov 2007; Piotr Szymaniak <lazy_bum@o2.pl> +blackshadeselite-9999.ebuild:
  New ebuild