@@ -1,3 +1,3 @@
 AUX blackshadeselite-gcc43.patch 263 RMD160 8ddcdd77ebfc3234f5d0a4ec6eb77bf1a1751910 SHA1 f3b8905e7d2541341c514eb5978f6aae787dfe26 SHA256 6ea349021333d9e2ba6658c7a840413c10f18fc697795a2dba293e45778e46b0
-EBUILD blackshadeselite-9999.ebuild 1037 RMD160 ce6b761a41882ae19c9599dc8d63561d529b9167 SHA1 f5881cc6339e3be664afff9f69077f28f7e4107b SHA256 92615ab5b3c86d3f1e888b219ee954cb2675932de591923ccc8deb373f1adca6
-MISC ChangeLog 539 RMD160 8c05e179d147e2ffe1508262d011a4e3b0e0d152 SHA1 92934b4b80ef9f75858c4c81f7b369282f9fd5fb SHA256 bbc64d44f66485ee2fb5eac8a301923ba3dfadbd2533ee16dc1ef73efcb678aa
+EBUILD blackshadeselite-9999.ebuild 1059 RMD160 026eed3809f8327544780b0e60868f2ff5312d44 SHA1 805db679e9090e201b216b04fc3a2df24d4c8a78 SHA256 f1d54011b8e567f2e145352601de25ad9584b7133a20d1c753f8bd1375e24616
+MISC ChangeLog 654 RMD160 62a327bd66c86cfe6a0a10e561429ba2a9fa284e SHA1 a28d7decefc87eadfdb11e99b5532f7996e31faf SHA256 e7029906fa59a1a4ed355027040e00b5eaac298ec0a6e3ed86dd4d997a898828
