@@ -3,6 +3,10 @@
 # $Header
 
   12 Feb 2009; Michał Ziąbkowski <mziab@o2.pl>
+  blackshadeselite-9999.ebuild:
+  Fixed repoman reported errors.
+
+  12 Feb 2009; Michał Ziąbkowski <mziab@o2.pl>
   +files/blackshadeselite-gcc43.patch:
   Oops.
 
